--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,72 +37,13 @@ services:
       - 16686:16686
       - 14268:14268
       - 9411:9411
-  prometheus:
-    image: prom/prometheus:latest
-    restart: unless-stopped
-    volumes:
-      - ./compose/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml
-      - ./compose/prometheus/data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--web.enable-lifecycle'
-    ports:
-      - 9090:9090
-  grafana:
-    image: "grafana/grafana:latest"
-    restart: unless-stopped
-    user: "0"
-    volumes:
-      - "./compose/grafana/data:/var/lib/grafana"
-    ports:
-      - 3000:3000
-    environment:
-      - GF_AUTH_DISABLE_LOGIN_FORM=true
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_SECURITY_ALLOW_EMBEDDING=true
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.1
-    volumes:
-      - ./compose/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
-      - elasticsearch:/usr/share/elasticsearch/data:z
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
-      # Use single node discovery in order to disable production mode and avoid bootstrap checks.
-      # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-      discovery.type: single-node
-  logstash:
-    image: docker.elastic.co/logstash/logstash:7.16.1
-    volumes:
-      - ./compose/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,z
-      - ./compose/logstash/pipeline:/usr/share/logstash/pipeline:ro,z
-    ports:
-      - "5044:5044"
-      - "5000:5000/tcp"
-      - "5000:5000/udp"
-      - "9600:9600"
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-    depends_on:
-      - elasticsearch
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.16.1
-    volumes:
-      - ./compose/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,z
-    ports:
-      - "5601:5601"
-    depends_on:
-      - elasticsearch
   redis:
     image: redis:6.2.6
     ports:
       - 6379:6379
+  redisinsight:
+    image: redislabs/redisinsight:1.11.0
+    ports:
+      - 8001:8001
 volumes:
   elasticsearch:
